--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="assets/styles/bootstrap.css" rel="stylesheet" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/styles/font-awesome-animation.css">
+  <link rel="stylesheet" href="assets/librairie/glyphicons-halflings-regular.svg">
   <link href="https://fonts.googleapis.com/css?family=Lora:700i|Play|Spirax" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/styles/style.css">
   <title>Mon CV</title>
