--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </section>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                   </div>
                 </div>
               </div>
