--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
           <nav class="navbar navbar-inverse nav-bar-static-top">
             <ul class="list-unstyled list-inline">
               <!--<li><a href="#header"><button class="btn btn-active btn-lg"><img src="icon2e.png" alt="icone" height="30px" width="30px"></button></a></li>-->
-              <li id="nanar1"><button class="btn btn-primary btn-lg " ><span class="glyphicon glyphicon-user"></span></button></li>
-              <li id="nanar2"><button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-road"></span></button></li>
-              <li id="nanar3"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-ban-circle"></span></button></li>
-              <li id="nanar4"><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-earphone"></span></button></li>
-              <li id="nanar5"><button class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-knight"></span></button></li>
+              <li id="nanar1"><a href="#!/presentation"><button class="btn btn-primary btn-lg " ><span class="glyphicon glyphicon-user"></span></button></a></li>
+              <li id="nanar2"><a href="#!/competences"><button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-road"></span></button></a></li>
+              <li id="nanar3"><a href="#!/experiences"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-ban-circle"></span></button></a></li>
+              <li id="nanar4"><a href="#!/contacts"><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-earphone"></span></button></a></li>
+              <li id="nanar5"><a href="#!/loisirs"><button class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-knight"></span></button></a></li>
             </ul>
           </nav>
         </div>
