--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/librairie/glyphicons-halflings-regular.svg">
   <link href="https://fonts.googleapis.com/css?family=Lora:700i|Play|Spirax" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/styles/style.css">
-  <title>Mon CV</title>
+  <title>CV Wilfried Bobo</title>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,7 +45,8 @@
                       <div><i class="fa fa-2x fa-briefcase coord"></i><span> Intégrateur Web, UX Designer <br>Développeur full stack junior</span></div><br>
                       <div ><i class="fa fa-2x fa-mobile coord"></i><span> 06 09 73 02 49</span></div><br>
                       <div><i class="fa fa-2x fa-envelope coord"></i><span> wilfried.nguessan.bobo@gmail.com</span></div><br>
-                      <div><a href="assets/moncv.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Mon cv au format PDF</span></a></div>
+                      <div><a href="assets/cv_BOBO_Wilfried.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Mon cv au format PDF</span></a></div>
+                      <div><a href="assets/OC_QWEB2015-BP_TVKYZC(1).pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Certificat Opquast</span></a></div>
                     </section>
                   </div>
                   <div class="modal-footer">
