position fichier opquast

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <div ><i class="fa fa-2x fa-mobile coord"></i><span> 06 09 73 02 49</span></div><br>
                       <div><i class="fa fa-2x fa-envelope coord"></i><span> wilfried.nguessan.bobo@gmail.com</span></div><br>
                       <div><a href="assets/cv_BOBO_Wilfried.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Mon cv au format PDF</span></a></div>
-                      <div><a href="assets/OC_QWEB2015-BP_TVKYZC(1).pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Certificat Opquast</span></a></div>
+                      <div id="opquast"><a href="assets/OC_QWEB2015-BP_TVKYZC(1).pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x coord"></i><span>Certificat Opquast</span></a></div>
                     </section>
                   </div>
                   <div class="modal-footer">
