Mise à jour numéro de téléphone

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="col-lg-2 col-md-4 col-sm-4 col-xs-4  phot">
             <img id="tac" src="assets/images/willy.jpg" alt="moi">
           </div>
-          <div class="col-lg-10 col-md-8 col-sm-8 col-xs-8 tete" id="gros_pd">
+          <div class="col-lg-10 col-md-8 col-sm-8 col-xs-8 tete" id="couv_img">
             <a href="#" class="coord_btn"><i class="fa fa-music fa-3x faa-pulse animated" data-toggle="modal" data-target="#information"></i></a>
             <div id="information" class="modal fade" role="dialog">
               <div class="modal-dialog .modal-sm .modal-lg">
@@ -40,7 +40,7 @@
                   <div class="modal-body">
                     <section>
                       <div><i class="fa fa-2x fa-user-circle coord "></i><span> Bobo N'Guessan Wilfried</span></div><br>
-                      <div><i class="fa fa-2x fa-birthday-cake coord"></i><span> 24 ans</span></div><br>
+                      <div><i class="fa fa-2x fa-birthday-cake coord"></i><span> 25 ans</span></div><br>
                       <div><i class="fa fa-2x fa-map-marker coord"></i><span>60400, Noyon</span> </div><br>
                       <div><i class="fa fa-2x fa-briefcase coord"></i><span> Intégrateur Web, UX Designer <br>Développeur full stack junior</span></div><br>
                       <div ><i class="fa fa-2x fa-mobile coord"></i><span> 06 51 04 42 93</span></div><br>
@@ -113,9 +113,9 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pleine ">
           <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 present ">
             <audio id="pres" src="assets/sound/do_d.wav" ></audio>
-            <a href="#!/presentation"><button id="do_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 boutton connard tient1 " title="Presentation" type="button" value="" onclick="play('pres');">Présentation</button></a>
+            <a href="#!/presentation"><button id="do_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 boutton bloc_link tient1 " title="Presentation" type="button" value="" onclick="play('pres');">Présentation</button></a>
             <audio id="comp" src="assets/sound/re_d.wav" ></audio>
-            <a href="#!/competences"><button id="re_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 button connard tient2" title="Competence" type="button" value="" onclick="play('comp');">Compétences</button></a>
+            <a href="#!/competences"><button id="re_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 button bloc_link tient2" title="Competence" type="button" value="" onclick="play('comp');">Compétences</button></a>
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -123,15 +123,15 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 pleine">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 experience ">
             <audio id="exp" src="assets/sound/fa_d.wav" ></audio>
-            <a href="#!/experiences"><button id="fa_di" class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 boutton col-sm-offset-4 col-sm-4 boutton  hidden-xs col-xs-6 button connard tient3" title="Experience" type="button" value="" onclick="play('exp');">Expériences</button></a>
+            <a href="#!/experiences"><button id="fa_di" class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 boutton col-sm-offset-4 col-sm-4 boutton  hidden-xs col-xs-6 button bloc_link tient3" title="Experience" type="button" value="" onclick="play('exp');">Expériences</button></a>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pleine ">
           <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 contact ">
             <audio id="cont" src="assets/sound/sol_d.wav" ></audio>
-            <a href="#!/contacts"><button id="sol_di" class="col-lg-offset-2 col-lg-2 col-md-offset-2 col-md-2 boutton col-sm-offset-2 col-sm-2 boutton hidden-xs col-xs-3 boutton connard tient4" title="Contact" type="button" value="" onclick="play('cont');">Contacts</button></a>
+            <a href="#!/contacts"><button id="sol_di" class="col-lg-offset-2 col-lg-2 col-md-offset-2 col-md-2 boutton col-sm-offset-2 col-sm-2 boutton hidden-xs col-xs-3 boutton bloc_link tient4" title="Contact" type="button" value="" onclick="play('cont');">Contacts</button></a>
             <audio id="lois" src="assets/sound/la_d.wav" ></audio>
-            <a href="#!/loisirs"><button id="la_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 button connard tient5" title="Loisir" type="button" value="" onclick="play('lois');">Loisirs</button></a>
+            <a href="#!/loisirs"><button id="la_di" class="col-lg-offset-3 col-lg-2 col-md-offset-3 col-md-2 boutton col-sm-offset-3 col-sm-2 boutton hidden-xs col-xs-3 button bloc_link tient5" title="Loisir" type="button" value="" onclick="play('lois');">Loisirs</button></a>
           </div>
         </div>
       </div>
